force-app/main/default/objects/Opportunity/fields/Opportunity_Record_Outcome_DueDate_Today__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Outcome_DueDate_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Record Outcome DueDate Today</label>
    <type>Checkbox</type>
</CustomField>