force-app/main/default/objects/Opportunity/fields/Opportunity_Record_Outcome_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Outcome_Name__c</fullName>
    <label>Opportunity Record Outcome Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>