force-app/main/default/objects/Opportunity/fields/Original_Annual_GDV__c.field-meta.xml
<CustomField>
    <fullName>Original_Annual_GDV__c</fullName>
    <label>Original Annual GDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>