force-app/main/default/objects/Opportunity/fields/Other_income_monthly__c.field-meta.xml
<CustomField>
    <fullName>Other_income_monthly__c</fullName>
    <label>Other income (monthly)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>