force-app/main/default/objects/Opportunity/fields/Other_material_Other_Product_terms__c.field-meta.xml
<CustomField>
    <fullName>Other_material_Other_Product_terms__c</fullName>
    <label>Other material &quot;Other Product&quot; terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>