force-app/main/default/objects/Opportunity/fields/Other_product_amount_monthly__c.field-meta.xml
<CustomField>
    <fullName>Other_product_amount_monthly__c</fullName>
    <formula>(  Transaction_volume_monthly__c  *  Fee_per_transaction__c ) +  Other_income_monthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other product - Amount (monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>