force-app/main/default/objects/Opportunity/fields/Payable_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Payable_Opportunity__c</fullName>
    <inlineHelpText>What types of payment fall under this opportunity?</inlineHelpText>
    <label>Payable Opportunity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BSP</fullName>
            </value>
            <value>
                <fullName>LCC</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>