force-app/main/default/objects/Opportunity/fields/Penetration_of_Attainable__c.field-meta.xml
<CustomField>
    <fullName>Penetration_of_Attainable__c</fullName>
    <inlineHelpText>What penetration of the available book do we currently have (applicable to existing customers only)?</inlineHelpText>
    <label>Penetration of Attainable (SOW)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>