force-app/main/default/objects/Opportunity/fields/Phase_0_Pre_Implement_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_0_Pre_Implement_Completed_Date__c</fullName>
    <inlineHelpText>This is the date when the Pre-Implementation Kick-off phase was completed.</inlineHelpText>
    <label>Phase 0 - Pre-Implement Completed Date</label>
    <type>Date</type>
</CustomField>