force-app/main/default/objects/Opportunity/fields/Phase_1_Planning_Prep_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_Planning_Prep_Completed_Date__c</fullName>
    <inlineHelpText>This is the date when the Planning &amp; Preparation phase was completed.</inlineHelpText>
    <label>Phase 1 - Planning &amp; Prep Completed Date</label>
    <type>Date</type>
</CustomField>