force-app/main/default/objects/Opportunity/fields/Phase_1_Setup_and_Conf_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_Setup_and_Conf_Completed_Date__c</fullName>
    <inlineHelpText>This is the date when the Setup and Configuration phase was completed.</inlineHelpText>
    <label>Phase 1 - Setup and Conf Completed Date</label>
    <type>Date</type>
</CustomField>