force-app/main/default/objects/Opportunity/fields/Phase_2_Development_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Development_Completed_Date__c</fullName>
    <inlineHelpText>This is the date when the Development phase was completed.</inlineHelpText>
    <label>Phase 2 - Development Completed Date</label>
    <type>Date</type>
</CustomField>