force-app/main/default/objects/Opportunity/fields/Phase_2_VAN_Training_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_VAN_Training_Completed_Date__c</fullName>
    <inlineHelpText>This is the date when the VAN Training phase was completed.</inlineHelpText>
    <label>Phase 2 - VAN Training Completed Date</label>
    <type>Date</type>
</CustomField>