force-app/main/default/objects/Opportunity/fields/Phase_3_Funding_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_3_Funding_Completed_Date__c</fullName>
    <inlineHelpText>This is the date when the Funding phase was completed.</inlineHelpText>
    <label>Phase 3 - Funding Completed Date</label>
    <type>Date</type>
</CustomField>