force-app/main/default/objects/Opportunity/fields/Phase_4_Live_Testing__c.field-meta.xml
<CustomField>
    <fullName>Phase_4_Live_Testing__c</fullName>
    <inlineHelpText>This is the date when the Live Testing phase was completed.</inlineHelpText>
    <label>Phase 4 - Live Testing</label>
    <type>Date</type>
</CustomField>