force-app/main/default/objects/Opportunity/fields/Phase_4_VAN_Reporting_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_4_VAN_Reporting_Completed_Date__c</fullName>
    <formula>Account.First_Transaction_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase 4 VAN Reporting Completed Date</label>
    <type>Date</type>
</CustomField>