force-app/main/default/objects/Opportunity/fields/Phase_5_Prod_Cut_Over_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_5_Prod_Cut_Over_Completed_Date__c</fullName>
    <inlineHelpText>This is the date when the Production Cut Over phase was completed.</inlineHelpText>
    <label>Phase 5 - Prod Cut Over Completed Date</label>
    <type>Date</type>
</CustomField>