force-app/main/default/objects/Opportunity/fields/Plan_Commercial_Segment__c.field-meta.xml
<CustomField>
    <fullName>Plan_Commercial_Segment__c</fullName>
    <label>Plan Commercial Segment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>