force-app/main/default/objects/Opportunity/fields/Plan_Headline_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Plan_Headline_Rebate__c</fullName>
    <label>Plan Headline Rebate</label>
    <length>3</length>
    <type>Text</type>
</CustomField>