force-app/main/default/objects/Opportunity/fields/Plan_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Plan_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan Opportunity?</label>
    <type>Checkbox</type>
</CustomField>