force-app/main/default/objects/Opportunity/fields/Plan_Opportunity_GDV_USD__c.field-meta.xml
<CustomField>
    <fullName>Plan_Opportunity_GDV_USD__c</fullName>
    <label>Plan Opportunity GDV (USD)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>