force-app/main/default/objects/Opportunity/fields/Plan_Tech_Fund_USD__c.field-meta.xml
<CustomField>
    <fullName>Plan_Tech_Fund_USD__c</fullName>
    <label>Plan Tech Fund (USD)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>