force-app/main/default/objects/Opportunity/fields/Plan_Volume_Incentive_USD__c.field-meta.xml
<CustomField>
    <fullName>Plan_Volume_Incentive_USD__c</fullName>
    <label>Plan Volume Incentive (USD)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>