force-app/main/default/objects/Opportunity/fields/Play__c.field-meta.xml
<CustomField>
    <fullName>Play__c</fullName>
    <inlineHelpText>What is the commercial play (for use in deal sheets). EG - Securing BSP volumes with a strong commercial offering. Structure deal to ensure additional rebate paid out only on incremental volumes after a ~5bps increase for exclusivity at current volumes.</inlineHelpText>
    <label>Play</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>