force-app/main/default/objects/Opportunity/fields/Preliminary_contact_made_with_client__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_contact_made_with_client__c</fullName>
    <inlineHelpText>This date is automatically populated when the preliminary contact with the client has been confirmed. The trigger is based on the Delivery Ticket - Preliminary Contact Established date field has been set.</inlineHelpText>
    <label>Preliminary contact made with client</label>
    <type>Date</type>
</CustomField>