force-app/main/default/objects/Opportunity/fields/Previous_Annual_GDV__c.field-meta.xml
<CustomField>
    <fullName>Previous_Annual_GDV__c</fullName>
    <label>Previous Annual GDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>