force-app/main/default/objects/Opportunity/fields/Previous_Monthly_GDV__c.field-meta.xml
<CustomField>
    <fullName>Previous_Monthly_GDV__c</fullName>
    <inlineHelpText>This field is used for Reporting -</inlineHelpText>
    <label>Previous Monthly GDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>