force-app/main/default/objects/Opportunity/fields/Primary_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Primary_Challenge__c</fullName>
    <inlineHelpText>What is the primary adoption challenge faced in order to win business?</inlineHelpText>
    <label>Primary Adoption Challenge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Model Change</fullName>
            </value>
            <value>
                <fullName>Commercials (Rebate)</fullName>
            </value>
            <value>
                <fullName>Competitor Solution / Offer</fullName>
            </value>
            <value>
                <fullName>Customer Apathy</fullName>
            </value>
            <value>
                <fullName>Funding / Credit / Cashflow</fullName>
            </value>
            <value>
                <fullName>IATA890</fullName>
            </value>
            <value>
                <fullName>Org. Buy-In / Business Priority</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Process Challenge-Billback</fullName>
            </value>
            <value>
                <fullName>Process Challenge-Retraining</fullName>
            </value>
            <value>
                <fullName>Process Challenge-System Complexity</fullName>
            </value>
            <value>
                <fullName>Product Deficiency-Functionality</fullName>
            </value>
            <value>
                <fullName>Product Deficiency-Local Currency</fullName>
            </value>
            <value>
                <fullName>Supplier Accept.-General</fullName>
            </value>
            <value>
                <fullName>Supplier Accept.-Hotel Recontracting</fullName>
            </value>
            <value>
                <fullName>Tech. Challenge-3rd Party Reliance</fullName>
            </value>
            <value>
                <fullName>Tech. Challenge-Backoffice/Downstream</fullName>
            </value>
            <value>
                <fullName>Tech. Challenge-Legacy Systems</fullName>
            </value>
            <value>
                <fullName>Tech. Challenge-Roadmap</fullName>
            </value>
            <value>
                <fullName>VCC Familiarity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>