force-app/main/default/objects/Opportunity/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>eNett Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VANs</fullName>
                <default>true</default>
                <label>VANs</label>
            </value>
            <value>
                <fullName>eNett EFT</fullName>
            </value>
            <value>
                <fullName>feeNett</fullName>
            </value>
            <value>
                <fullName>Virtual Terminal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>