force-app/main/default/objects/Opportunity/fields/Projected_365__c.field-meta.xml
<CustomField>
    <fullName>Projected_365__c</fullName>
    <label>Projected 365</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>