force-app/main/default/objects/Opportunity/fields/Rebate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Type__c</fullName>
    <inlineHelpText>What type of rebate structure is being proposed?</inlineHelpText>
    <label>Rebate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tiered - % of Interchange</fullName>
            </value>
            <value>
                <fullName>Tiered - BPS</fullName>
            </value>
            <value>
                <fullName>Straight - % of Interchange</fullName>
            </value>
            <value>
                <fullName>Straight - BPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>