force-app/main/default/objects/Opportunity/fields/Records__c.field-meta.xml
<CustomField>
    <fullName>Records__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>