force-app/main/default/objects/Opportunity/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <inlineHelpText>Confirm status of referral with Country Manager before selecting</inlineHelpText>
    <label>Introducer / Referrer Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>About Payments</fullName>
            </value>
            <value>
                <fullName>Adyen</fullName>
            </value>
            <value>
                <fullName>Agoda</fullName>
            </value>
            <value>
                <fullName>Air Asia</fullName>
            </value>
            <value>
                <fullName>Axess International Network, Inc</fullName>
            </value>
            <value>
                <fullName>CCRA International</fullName>
            </value>
            <value>
                <fullName>CEE Travel System</fullName>
            </value>
            <value>
                <fullName>Club Travel SA</fullName>
            </value>
            <value>
                <fullName>Computop</fullName>
            </value>
            <value>
                <fullName>Conferma</fullName>
            </value>
            <value>
                <fullName>Contac Services</fullName>
            </value>
            <value>
                <fullName>Cornerstone</fullName>
            </value>
            <value>
                <fullName>Dolphin Dynamics</fullName>
            </value>
            <value>
                <fullName>Flightgenius</fullName>
            </value>
            <value>
                <fullName>Gant Travel Management</fullName>
            </value>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Geo SPA</fullName>
            </value>
            <value>
                <fullName>Globalcollect</fullName>
            </value>
            <value>
                <fullName>HitchHiker</fullName>
            </value>
            <value>
                <fullName>Hotelzon</fullName>
            </value>
            <value>
                <fullName>IGA Voyages</fullName>
            </value>
            <value>
                <fullName>Juniper</fullName>
            </value>
            <value>
                <fullName>Lloyd &amp; Co. Pty Ltd</fullName>
            </value>
            <value>
                <fullName>Manor</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Mr Orange</fullName>
            </value>
            <value>
                <fullName>Multicom</fullName>
            </value>
            <value>
                <fullName>Navitas</fullName>
            </value>
            <value>
                <fullName>Orchestra</fullName>
            </value>
            <value>
                <fullName>PayU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>