force-app/main/default/objects/Opportunity/fields/Region_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Trading_Name__c</fullName>
    <formula>TEXT(Account.Region__c) + &quot; - &quot; + Account.Trading_As__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Trading Name</label>
    <type>Text</type>
</CustomField>