force-app/main/default/objects/Opportunity/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <description>This holds the Registration saved on the Completion of the Opportunity Qualify Task</description>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AML Internal Registration</fullName>
            </value>
            <value>
                <fullName>eNett Online Registration</fullName>
            </value>
            <value>
                <fullName>Registration not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>