force-app/main/default/objects/Opportunity/fields/Related_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Related_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Ticket</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>