force-app/main/default/objects/Opportunity/fields/reporting_summary__c.field-meta.xml
<CustomField>
    <fullName>reporting_summary__c</fullName>
    <inlineHelpText>Narrative to appear on management / shareholder reports</inlineHelpText>
    <label>Reporting summary</label>
    <length>140</length>
    <type>Text</type>
</CustomField>