force-app/main/default/objects/Opportunity/fields/September_14__c.field-meta.xml
<CustomField>
    <fullName>September_14__c</fullName>
    <label>September 14</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>