force-app/main/default/objects/Opportunity/fields/September_15__c.field-meta.xml
<CustomField>
    <fullName>September_15__c</fullName>
    <label>September 15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>