force-app/main/default/objects/Opportunity/fields/Settled_Year_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Settled_Year_To_Date__c</fullName>
    <formula>Account.Yearly_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settled Year To Date USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>