force-app/main/default/objects/Opportunity/fields/SOM_Completed_GDV__c.field-meta.xml
<CustomField>
    <fullName>SOM_Completed_GDV__c</fullName>
    <formula>IF (AND(NOT(ISBLANK(SOM_Inclusion__c)), AND(MONTH(Completed_Date__c) = MONTH(TODAY()), YEAR(Completed_Date__c) = YEAR(TODAY()))), Attainable_TTV_annual__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOM Completed GDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>