force-app/main/default/objects/Opportunity/fields/SOM_Delivery_Week__c.field-meta.xml
<CustomField>
    <fullName>SOM_Delivery_Week__c</fullName>
    <formula>IF( ISNULL(Estimated_Completion_Date__c), &quot;&quot;, IF(DAY( Estimated_Completion_Date__c ) &gt;21,&quot;Week 4&quot;, IF(DAY( Estimated_Completion_Date__c ) &gt;14, &quot;Week 3&quot;, IF(DAY( Estimated_Completion_Date__c ) &gt;7, &quot;Week 2&quot;, &quot;Week 1&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Week</label>
    <type>Text</type>
</CustomField>