force-app/main/default/objects/Opportunity/fields/SOM_Delta__c.field-meta.xml
<CustomField>
    <fullName>SOM_Delta__c</fullName>
    <formula>OR(AND(SOM_Target__c != 0, SOM_Revised__c != SOM_Target__c), 
AND(NOT(ISNULL(SOM_Estimated_Completion__c)), SOM_Estimated_Completion__c != Estimated_Completion_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOM Delta</label>
    <type>Checkbox</type>
</CustomField>