force-app/main/default/objects/Opportunity/fields/SOM_Estimated_Annual_GDV__c.field-meta.xml
<CustomField>
    <fullName>SOM_Estimated_Annual_GDV__c</fullName>
    <label>SOM_Estimated_Annual_GDV</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>