force-app/main/default/objects/Opportunity/fields/SOM_Estimated_Completion__c.field-meta.xml
<CustomField>
    <fullName>SOM_Estimated_Completion__c</fullName>
    <label>SOM Estimated Completion</label>
    <type>Date</type>
</CustomField>