force-app/main/default/objects/Opportunity/fields/SOM_Estimation_Justification__c.field-meta.xml
<CustomField>
    <fullName>SOM_Estimation_Justification__c</fullName>
    <formula>Related_Ticket__r.SOM_Estimation_Justification__c</formula>
    <label>SOM Estimation Justification</label>
    <type>Text</type>
</CustomField>