force-app/main/default/objects/Opportunity/fields/SOM_Inclusion__c.field-meta.xml
<CustomField>
    <fullName>SOM_Inclusion__c</fullName>
    <formula>CASE(IF(OR(
AND(OR(AND(MONTH(SOM_Estimated_Completion__c)= MONTH(TODAY()),
            YEAR(SOM_Estimated_Completion__c) = YEAR(TODAY())),

AND(MONTH(Estimated_Completion_Date__c) = MONTH(TODAY()),
            YEAR(Estimated_Completion_Date__c) = YEAR(TODAY()))),ISNULL(Completed_Date__c)),

AND(MONTH(Completed_Date__c) = MONTH(TODAY()),YEAR(Completed_Date__c) = YEAR(TODAY()))),MONTH(TODAY()),0), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Month</label>
    <type>Text</type>
</CustomField>