force-app/main/default/objects/Opportunity/fields/SOM_Revised__c.field-meta.xml
<CustomField>
    <fullName>SOM_Revised__c</fullName>
    <formula>IF( 
OR( 
AND(MONTH(Estimated_Completion_Date__c)=MONTH(TODAY()), 
YEAR(Estimated_Completion_Date__c)=YEAR(TODAY()), 
ISNULL(Completed_Date__c)), 
AND(MONTH(Completed_Date__c)=MONTH(TODAY()), 
YEAR(Completed_Date__c)=YEAR(TODAY()))), 



Attainable_TTV_annual__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOM Revised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>