force-app/main/default/objects/Opportunity/fields/SOM_Target__c.field-meta.xml
<CustomField>
    <fullName>SOM_Target__c</fullName>
    <formula>IF(AND(MONTH(SOM_Estimated_Completion__c) = MONTH(TODAY()), YEAR(SOM_Estimated_Completion__c) = YEAR(TODAY())), SOM_Estimated_Annual_GDV__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOM Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>