force-app/main/default/objects/Opportunity/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <inlineHelpText>Who is the opportunity sponsor?</inlineHelpText>
    <label>Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anth</fullName>
            </value>
            <value>
                <fullName>Dave</fullName>
            </value>
            <value>
                <fullName>Matt</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Mike</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>