force-app/main/default/objects/Opportunity/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>First level sub region for the country</description>
    <label>Sub Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>