force-app/main/default/objects/Opportunity/fields/target_full_attv_date__c.field-meta.xml
<CustomField>
    <fullName>target_full_attv_date__c</fullName>
    <label>Target full GDV date</label>
    <type>Date</type>
</CustomField>