force-app/main/default/objects/Opportunity/fields/target_go_live_date__c.field-meta.xml
<CustomField>
    <fullName>target_go_live_date__c</fullName>
    <label>Target go-live date</label>
    <type>Date</type>
</CustomField>