force-app/main/default/objects/Opportunity/fields/Target_Sector__c.field-meta.xml
<CustomField>
    <fullName>Target_Sector__c</fullName>
    <inlineHelpText>What targeted sector does this opportunity fall under?</inlineHelpText>
    <label>FCP Sector</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Consolidator</fullName>
            </value>
            <value>
                <fullName>Major OTA</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
            <value>
                <fullName>Wholly Owned Leisure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>