force-app/main/default/objects/Opportunity/fields/Tech_Funding__c.field-meta.xml
<CustomField>
    <fullName>Tech_Funding__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Cash contribution towards development of API or automated integration solution.</inlineHelpText>
    <label>Tech Funding</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>