force-app/main/default/objects/Opportunity/fields/Terminated_Delivery_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Terminated_Delivery_Duration_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Terminated Delivery Duration Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>