force-app/main/default/objects/Opportunity/fields/Terminated_Delivery_Effort_Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Terminated_Delivery_Effort_Man_Hours__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Terminated Delivery Effort Man Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>