force-app/main/default/objects/Opportunity/fields/Total_Delivery_Duration_minus_Dormant__c.field-meta.xml
<CustomField>
    <fullName>Total_Delivery_Duration_minus_Dormant__c</fullName>
    <formula>Delivery_Duration__c-Total_Dormant_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This number is the total of the following values: Previously Terminated Delivery Duration (PLUS) Current Delivery Duration (MINUS) Total Dormant Duration.</inlineHelpText>
    <label>Total Delivery Duration (minus Dormant)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>