force-app/main/default/objects/Opportunity/fields/Total_Delivery_Effort_Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Delivery_Effort_Man_Hours__c</fullName>
    <formula>Terminated_Delivery_Effort_Man_Hours__c +  Hours_Man_Effort_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Delivery Effort Man Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>