force-app/main/default/objects/Opportunity/fields/Total_Dormant_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Dormant_Duration__c</fullName>
    <label>Total Dormant Duration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>