force-app/main/default/objects/Opportunity/fields/Training_completed__c.field-meta.xml
<CustomField>
    <fullName>Training_completed__c</fullName>
    <inlineHelpText>This date is automatically populated when the client training has been delivered. The trigger is based on the Delivery Ticket - Training Completed date field has been set.</inlineHelpText>
    <label>Training completed</label>
    <type>Date</type>
</CustomField>