force-app/main/default/objects/Opportunity/fields/Training_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Completed_Date__c</fullName>
    <inlineHelpText>This is a Date field which is equivalent to Training_Completed__c for historical records.
This is updated automatically when the Enter_Training_Completed_Date__c  field in delivery ticket is updated</inlineHelpText>
    <label>Training Completed Date</label>
    <type>Date</type>
</CustomField>