force-app/main/default/objects/Opportunity/fields/Transaction_volume_monthly__c.field-meta.xml
<CustomField>
    <fullName>Transaction_volume_monthly__c</fullName>
    <label>Transaction volume (monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>